--- a/src/togglemenu-hover.less
+++ b/src/togglemenu-hover.less
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
     }
-    .item-nav {
+    .nav-item {
         position: relative;
         list-style: none;
 
@@ -32,11 +32,11 @@
             }
         }
     }
-    .depth-1 > .item-nav {
+    .depth-1 > .nav-item {
         position: relative;
         display: inline-block;
 
-        + .item-nav {
+        + .nav-item {
             margin-left: 10px;
         }
     }
