--- a/src/togglemenu-mega.less
+++ b/src/togglemenu-mega.less
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
     }
-    .item-nav {
+    .nav-item {
         list-style: none;
 
         a {
@@ -31,10 +31,10 @@
             }
         }
     }
-    .depth-1 > .item-nav {
+    .depth-1 > .nav-item {
         display: inline-block;
 
-        + .item-nav {
+        + .nav-item {
             margin-left: 10px;
         }
     }
@@ -165,7 +165,7 @@
             color: #fff;
         }
 
-        .item-nav {
+        .nav-item {
             a {
                 color: #fff;
                 background: none;
