Convert less to scss

--- a/src/togglemenu-hover.scss
+++ b/src/togglemenu-hover.scss
@@ -1,9 +1,9 @@
 /* ==========================================================================
    Variables
    ========================================================================== */
-@color-primary: #ff5a60;
-@color-secondary: #303748;
-@menu-width: 150px;
+$color-primary: #ff5a60;
+$color-secondary: #303748;
+$menu-width: 150px;
 
 /* ==========================================================================
    TogglemenuHover
@@ -20,7 +20,7 @@
         a {
             display: block;
             padding: 10px 20px;
-            color: @color-secondary;
+            color: $color-secondary;
             font-size: 1.5em;
             text-decoration: none;
             background: #fff;
@@ -28,7 +28,7 @@
 
             &:hover {
                 color: #fff;
-                background-color: @color-primary;
+                background-color: $color-primary;
             }
         }
     }
@@ -47,14 +47,14 @@
             top: 44px;
             left: 0;
             z-index: -1;
-            width: @menu-width;
+            width: $menu-width;
             max-height: 0;
             overflow: hidden;
             transition: .3s;
 
             &.depth-3 {
                 top: 0;
-                left: @menu-width;
+                left: $menu-width;
             }
         }
 
@@ -69,7 +69,7 @@
 
     .is-active > a {
         color: #fff;
-        background-color: @color-primary;
+        background-color: $color-primary;
     }
 
     .depth-2 {
@@ -86,7 +86,7 @@
                     z-index: 5;
                     width: 10px;
                     height: 2px;
-                    background: @color-secondary;
+                    background: $color-secondary;
                     transform: rotate(45deg);
                     transition: background-color .3s;
                 }
