--- a/src/togglemenu-fixed.scss
+++ b/src/togglemenu-fixed.scss
@@ -1,10 +1,10 @@
 /* ==========================================================================
    Variables
    ========================================================================== */
-@color-primary: #ff5a60;
-@color-secondary: #303748;
-@color-tertiary: #181b22;
-@menu-width: 100px;
+$color-primary: #ff5a60;
+$color-secondary: #303748;
+$color-tertiary: #181b22;
+$menu-width: 100px;
 
 /* ==========================================================================
    Navigation fixed
@@ -15,7 +15,7 @@
     left: 0;
     z-index: 2050;
     height: 100%;
-    width: @menu-width;
+    width: $menu-width;
     background: #fff;
     transition: width .3s;
 
@@ -26,18 +26,18 @@
     }
 
     .is-togglemenuOpen & {
-        width: @menu-width*2;
+        width: $menu-width*2;
     }
 
     > .item-depth {
         margin: 0;
         padding: 0;
-        width: @menu-width;
+        width: $menu-width;
         transition: width .3s;
         overflow: hidden;
 
         .is-togglemenuOpen & {
-            width: @menu-width*2;
+            width: $menu-width*2;
             overflow: visible;
         }
 
@@ -54,7 +54,7 @@
             transition: .3s;
 
             &:hover {
-                color: @color-primary;
+                color: $color-primary;
             }
         }
 
@@ -84,7 +84,7 @@
                         height: 60px;
                         color: #fff;
                         font-size: 28px;
-                        background-color: @color-secondary;
+                        background-color: $color-secondary;
                         border-radius: 50%;
                         transform: translateX(-50%);
                         transition: background-color .3s;
@@ -101,18 +101,18 @@
                 &.is-active a,
                 a:hover {
                     &:before {
-                        background-color: @color-primary;
+                        background-color: $color-primary;
                     }
                     span:after {
-                        background-color: @color-secondary;
+                        background-color: $color-secondary;
                     }
                 }
                 span {
                     display: block;
                     height: 0;
                     line-height: 1.2;
-                    width: @menu-width*2 - 30px;
-                    color: @color-secondary;
+                    width: $menu-width*2 - 30px;
+                    color: $color-secondary;
                     transform: translateX(-10%);
                     transition: .3s;
                     opacity: 0;
@@ -125,7 +125,7 @@
                         transform: translateX(-50%);
                         width: 16px;
                         height: 2px;
-                        background: darken(@color-primary, 10%);
+                        background: darken($color-primary, 10%);
                         transition: .3s;
                     }
                     .is-togglemenuOpen & {
@@ -142,12 +142,12 @@
         .depth-2 {
             position: absolute;
             top: 0;
-            left: @menu-width*2;
+            left: $menu-width*2;
             z-index: -1;
             padding: 120px 30px 30px;
-            width: @menu-width*2;
+            width: $menu-width*2;
             height: 100%;
-            background-color: fade(@color-secondary, 95%);
+            background-color: rgba($color-secondary, .95);
             opacity: 0;
             transform: translateX(-150%);
             transition: .3s;
@@ -216,7 +216,7 @@
                 color: darken(#fff, 10%);
 
                 &:hover {
-                    color: @color-primary;
+                    color: $color-primary;
                 }
             }
         }
@@ -231,13 +231,12 @@
        ========================================================================== */
     .page {
         margin: 0;
-        padding-left: @menu-width*2;
+        padding-left: $menu-width*2;
         box-sizing: border-box;
         transition: padding-left .3s;
-
-        .is-togglemenuOpen& {
-            padding-left: @menu-width*3;
-        }
+    }
+    &.is-togglemenuOpen .page {
+        padding-left: $menu-width*3;
     }
 
     /* Toggle
@@ -250,14 +249,10 @@
         padding: 0;
         width: 24px;
         height: 24px;
-        background: @color-primary;
+        background: $color-primary;
         border: 0;
         border-radius: 50%;
         transition: .3s;
-
-        .is-togglemenuOpen& {
-            transform: rotateY(180deg);
-        }
 
         span {
             width: auto;
@@ -276,5 +271,8 @@
                 transform: rotate(-45deg);
             }
         }
+    }
+    &.is-togglemenuOpen .togglemenu-toggle {
+        transform: rotateY(180deg);
     }
 }
