--- a/src/togglemenu-push.scss
+++ b/src/togglemenu-push.scss
@@ -1,10 +1,10 @@
 /* ==========================================================================
    Variables
    ========================================================================== */
-@color-primary: #ff5a60;
-@color-secondary: #303748;
-@color-tertiary: #181b22;
-@menu-width: 300px;
+$color-primary: #ff5a60;
+$color-secondary: #303748;
+$color-tertiary: #181b22;
+$menu-width: 300px;
 
 /* ==========================================================================
    Navigation push
@@ -14,14 +14,14 @@
     top: 0;
     left: 0;
     z-index: 50;
-    width: @menu-width;
+    width: $menu-width;
     height: 100%;
     background: #fff;
     overflow: auto;
     overflow-x: hidden;
     transform: translateX(-100%);
     transition: transform .3s;
-    box-shadow: 0 5px 24px rgba(0, 0, 0, .24);
+    box-shadow: 0 5px 24px rgba(#000, .24);
 
     .is-togglemenuOpen & {
         transform: translateX(0);
@@ -36,7 +36,7 @@
 }
 .togglemenu-close {
     padding: 20px;
-    background: @color-tertiary;
+    background: $color-tertiary;
     overflow: hidden;
 
     button {
@@ -48,13 +48,13 @@
         height: 50px;
         color: #fff;
         text-indent: -9999px;
-        background: @color-secondary;
+        background: $color-secondary;
         border: 0;
         cursor: pointer;
         transition: background-color .3s;
 
         &:hover {
-            background-color: @color-primary;
+            background-color: $color-primary;
         }
 
         &:before,
@@ -86,14 +86,14 @@
             position: relative;
             display: block;
             padding: 20px;
-            color: @color-secondary;
+            color: $color-secondary;
             font-size: 1.5em;
             font-weight: bold;
             text-decoration: none;
         }
 
         + .nav-item > a {
-            border-top: 1px solid fade(@color-secondary, 10%);
+            border-top: 1px solid rgba($color-secondary, .1);
         }
     }
 }
@@ -101,13 +101,14 @@
 
 /* Contexte de page
    ========================================================================== */
-.togglemenu-push .page {
-    transition: transform .3s;
-
-    .is-togglemenuOpen& {
+.togglemenu-push {
+    .page {
+        transition: transform .3s;
+    }
+    &.is-togglemenuOpen .page {
         position: fixed;
         width: 100%;
-        transform: translateX(@menu-width) scale(.9);
+        transform: translateX($menu-width) scale(.9);
         user-select: none;
     }
 }
@@ -144,7 +145,7 @@
             z-index: 5;
             width: 10px;
             height: 2px;
-            background: @color-secondary;
+            background: $color-secondary;
             transform: rotate(45deg);
             transform-origin: center -3px;
             transition: transform-origin .3s;
@@ -182,7 +183,7 @@
             z-index: 5;
             width: 10px;
             height: 2px;
-            background: @color-secondary;
+            background: $color-secondary;
             transform: rotate(45deg);
             transform-origin: right center;
             transition: transform-origin .3s;
@@ -196,7 +197,7 @@
         top: 0;
         left: 0;
         z-index: 55;
-        width: @menu-width;
+        width: $menu-width;
         height: 100%;
         background: #fff;
         transform: translateX(-100%);
@@ -211,7 +212,7 @@
     /* Retour
        ========================================================================== */
     .item-back {
-        &:extend(.togglemenu-close all);
+        @extend .togglemenu-close;
 
         .item-btn {
             float: left;
