--- a/src/togglemenu-overlay.scss
+++ b/src/togglemenu-overlay.scss
@@ -1,9 +1,9 @@
 /* ==========================================================================
    Variables
    ========================================================================== */
-$color-primary: #ff5a60;
-$color-secondary: #303748;
-$color-tertiary: #181b22;
+$color--primary: #ff5a60;
+$color--secondary: #303748;
+$color--tertiary: #181b22;
 
 /* ==========================================================================
    Navigation overlay
@@ -27,7 +27,7 @@ $color-tertiary: #181b22;
         z-index: -1;
         width: 100%;
         height: 150%;
-        background-color: rgba($color-tertiary, .9);
+        background-color: rgba($color--tertiary, .9);
     }
 
     .is-togglemenuOpen & {
@@ -63,7 +63,7 @@ $color-tertiary: #181b22;
         }
     }
     &.is-togglemenuOpen .togglemenu-toggle {
-        background-color: $color-primary;
+        background-color: $color--primary;
 
         span {
             width: 0;
@@ -95,7 +95,7 @@ $color-tertiary: #181b22;
                 position: absolute;
                 top: 50%;
                 z-index: -1;
-                border-left: 1px solid rgba($color-secondary, .2);
+                border-left: 1px solid rgba($color--secondary, .2);
                 transform: translate3d(-50%, -50%, 0);
                 opacity: 0;
                 transition: .3s;
@@ -115,7 +115,7 @@ $color-tertiary: #181b22;
             }
             a:hover,
             &.is-active > a {
-                color: $color-primary;
+                color: $color--primary;
             }
             + .nav-item > a {
                 border: 0;
@@ -150,7 +150,7 @@ $color-tertiary: #181b22;
                     z-index: 5;
                     width: 10px;
                     height: 2px;
-                    background: $color-secondary;
+                    background: $color--secondary;
                     transform: rotate(45deg);
                     transition: background-color .3s;
                 }
