Fix demo styles

--- a/src/togglemenu-hover.scss
+++ b/src/togglemenu-hover.scss
@@ -8,7 +8,7 @@ $menu--width: 150px;
 /* ==========================================================================
    TogglemenuHover
    ========================================================================== */
-.togglemenu-hover {
+.nav--hover {
     .item-depth {
         margin: 0;
         padding: 0;
