--- a/src/togglemenu-fixed.scss
+++ b/src/togglemenu-fixed.scss
@@ -9,7 +9,7 @@ $menu--width: 100px;
 /* ==========================================================================
    Navigation fixed
    ========================================================================== */
-.nav--fixed {
+.togglemenu--fixed {
     position: fixed;
     top: 0;
     left: 0;
@@ -25,7 +25,7 @@ $menu--width: 100px;
         text-align: center;
     }
 
-    .is-togglemenuOpen & {
+    .is-togglemenu-open & {
         width: $menu--width*2;
     }
 
@@ -226,7 +226,7 @@ $menu--width: 100px;
 /* ==========================================================================
    ToggleMenuFixed
    ========================================================================== */
-.togglemenu-fixed {
+body {
     /* Contexte de page
        ========================================================================== */
     .page {
@@ -235,7 +235,7 @@ $menu--width: 100px;
         box-sizing: border-box;
         transition: padding-left .3s;
     }
-    &.is-togglemenuOpen .page {
+    &.is-togglemenu-open .page {
         padding-left: $menu--width*3;
     }
 
@@ -272,7 +272,7 @@ $menu--width: 100px;
             }
         }
     }
-    &.is-togglemenuOpen .togglemenu-toggle {
+    &.is-togglemenu-open .togglemenu-toggle {
         transform: rotateY(180deg);
     }
 }
