--- a/src/togglemenu-mega.scss
+++ b/src/togglemenu-mega.scss
@@ -8,7 +8,7 @@ $color--tertiary: #181b22;
 /* ==========================================================================
    TogglemenuMega
    ========================================================================== */
-.togglemenu-mega {
+.togglemenu--mega {
     .item-depth {
         margin: 0;
         padding: 0;
@@ -77,7 +77,7 @@ $color--tertiary: #181b22;
         }
     }
 }
-.togglemenuMega-overlay {
+.togglemenu-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -89,7 +89,7 @@ $color--tertiary: #181b22;
     transition: opacity .3s;
     cursor: pointer;
 
-    .is-togglemenuOpen & {
+    .is-togglemenu-open & {
         z-index: 45;
         width: 100%;
         height: 100%;
@@ -100,7 +100,7 @@ $color--tertiary: #181b22;
 /* ==========================================================================
    Navigation mega
    ========================================================================== */
-.nav--mega {
+.togglemenu--mega {
     position: relative;
     z-index: 48;
 
